--- a/src/components/CryptoCurrencies.css
+++ b/src/components/CryptoCurrencies.css
@@ -3,16 +3,13 @@
   --text--color--2nd: #bcc0b9;
   --text--color--3rd: #787c82;
   --text--color--4th: rgb(95, 95, 95);
+  --text--color--5th: rgb(48, 49, 52);
 }
 
 table {
   border-top: 0.5px solid var(--text--color--3rd);
   border-bottom: 0.5px solid var(--text--color--3rd);
   width: 100%;
-  margin: 100px auto;
-}
-table > tbody > tr:hover {
-  background-color: #202129;
 }
 table > thead > tr > th {
   padding: 15px;
@@ -21,35 +18,37 @@ table > thead > tr > th {
   color: silver;
 }
 table > tbody > tr > td {
-  /* border-top: 0.5px solid var(--text--color--4th); */
+  border-color: var(--text--color--5th);
   text-align: center;
   padding: 15px;
   color: var(--text--color);
-  font-weight: bold;
+  font-weight: 600;
   font-size: 14px;
 }
-table > tbody > tr > :nth-child(2),
-table > tbody > tr > :nth-child(1) {
+table > tbody > tr > td:nth-child(2),
+table > tbody > tr > td:nth-child(1) {
   color: var(--text--color--2nd);
   font-weight: normal;
-  width: fit-content;
   padding-right: 0;
   padding-left: 0;
 }
-table > tbody > tr > :nth-child(3) {
+table > tbody > tr > td:nth-child(3) {
   text-align: left;
 }
-table > tbody > tr > :nth-child(4) {
+table > tbody > tr > td:nth-child(4) {
   text-align: right;
 }
-table > tbody > tr > :nth-child(5) {
+table > tbody > tr > td:nth-child(5) {
   font-weight: normal;
 }
-table > tbody > tr > :nth-child(6) {
+table > tbody > tr > td:nth-child(6) {
   font-weight: normal;
 }
-table > tbody > tr > :nth-child(7) {
+table > tbody > tr > td:nth-child(7) {
   text-align: right;
+}
+table > tbody > tr:nth-child(odd) {
+  background-color: var(--text--color--5th);
 }
 .btn:hover {
   cursor: pointer;
